# labnote-extractor

./: .gitignore  DESIGN.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
_seed/: electrochem_validator.py  semantics_electrodeposition.py
eval/: __init__.py  append_score.py  baseline_vlm.py  report.py  results.md  score.py  scores.csv
eval/ground_truth/: page57.json
eval/runs/: baseline_opus-4-8.json  phase2_opus-4-8.json  phase3_opus-4-8.json  phase5_opus-4-8.json  phase6_opus-4-8.json  phase7_opus-4-8.json
pipeline/: __init__.py  classify.py  correct.py  registry.py
pipeline/perception/: __init__.py  layout.py  normalize.py  ocr_math.py  ocr_text.py  ocsr.py  preprocess.py
pipeline/semantics/: __init__.py  electrodeposition.py  spectroscopy.py  synthesis.py
reference/: __init__.py  chem_resolve.py  constants.py
schema/: base.schema.json  electrodeposition.schema.json  spectroscopy.schema.json
tests/: test_correct.py  test_electrodeposition.py
